// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BackgroundImage 1`] = `
<div
  className="pf-c-background-image"
  src={
    Object {
      "filter": "/assets/images/background-filter.svg",
      "lg": "/assets/images/pfbg_1200.jpg",
      "sm": "/assets/images/pfbg_768.jpg",
      "sm2x": "/assets/images/pfbg_768@2x.jpg",
      "xs": "/assets/images/pfbg_576.jpg",
      "xs2x": "/assets/images/pfbg_576@2x.jpg",
    }
  }
>
  <svg
    className="pf-c-background-image__filter"
    height="0"
    width="0"
    xmlns="http://www.w3.org/2000/svg"
  >
    <filter
      id="image_overlay"
    >
      <feColorMatrix
        type="matrix"
        values="1 0 0 0 0 1 0 0 0 0 1 0 0 0 0 0 0 0 1 0"
      />
      <feComponentTransfer
        colorInterpolationFilters="sRGB"
        result="duotone"
      >
        <feFuncR
          tableValues="0.086274509803922 0.43921568627451"
          type="table"
        />
        <feFuncG
          tableValues="0.086274509803922 0.43921568627451"
          type="table"
        />
        <feFuncB
          tableValues="0.086274509803922 0.43921568627451"
          type="table"
        />
        <feFuncA
          tableValues="0 1"
          type="table"
        />
      </feComponentTransfer>
    </filter>
  </svg>
</div>
`;

exports[`BackgroundImage 2`] = `
<div
  className="pf-c-background-image"
  src={
    Object {
      "filter": "/assets/images/background-filter.svg",
      "lg": "/assets/images/pfbg_1200.jpg",
      "sm": "/assets/images/pfbg_768.jpg",
      "sm2x": "/assets/images/pfbg_768@2x.jpg",
      "xs": "/assets/images/pfbg_576.jpg",
      "xs2x": "/assets/images/pfbg_576@2x.jpg",
    }
  }
>
  <svg
    className="pf-c-background-image__filter"
    height="0"
    width="0"
    xmlns="http://www.w3.org/2000/svg"
  >
    <filter
      id="image_overlay"
    >
      <feColorMatrix
        type="matrix"
        values="1 0 0 0 0 1 0 0 0 0 1 0 0 0 0 0 0 0 1 0"
      />
      <feComponentTransfer
        colorInterpolationFilters="sRGB"
        result="duotone"
      >
        <feFuncR
          tableValues="0.086274509803922 0.43921568627451"
          type="table"
        />
        <feFuncG
          tableValues="0.086274509803922 0.43921568627451"
          type="table"
        />
        <feFuncB
          tableValues="0.086274509803922 0.43921568627451"
          type="table"
        />
        <feFuncA
          tableValues="0 1"
          type="table"
        />
      </feComponentTransfer>
    </filter>
  </svg>
</div>
`;

exports[`allows passing in a single string as the image src 1`] = `
<div
  className="pf-c-background-image"
  src="/assets/images/pfbg_1200.jpg"
>
  <svg
    className="pf-c-background-image__filter"
    height="0"
    width="0"
    xmlns="http://www.w3.org/2000/svg"
  >
    <filter
      id="image_overlay"
    >
      <feColorMatrix
        type="matrix"
        values="1 0 0 0 0 1 0 0 0 0 1 0 0 0 0 0 0 0 1 0"
      />
      <feComponentTransfer
        colorInterpolationFilters="sRGB"
        result="duotone"
      >
        <feFuncR
          tableValues="0.086274509803922 0.43921568627451"
          type="table"
        />
        <feFuncG
          tableValues="0.086274509803922 0.43921568627451"
          type="table"
        />
        <feFuncB
          tableValues="0.086274509803922 0.43921568627451"
          type="table"
        />
        <feFuncA
          tableValues="0 1"
          type="table"
        />
      </feComponentTransfer>
    </filter>
  </svg>
</div>
`;
